--- a/client/src/components/cards/pokeCard/card.module.css
+++ b/client/src/components/cards/pokeCard/card.module.css
@@ -23,7 +23,7 @@
 #pokeCard table .containerData {
     box-shadow: 0px 0px 10px 1px black;
     border-radius: 15px;
-    height: 18vh;
+    height: auto;
     margin-top: 5vh;
 }
 
@@ -34,7 +34,7 @@
 }
 
 #pokeCard table .pokeName p {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 
